2007-04-28  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8/oci8.rb: fetch NCLOB column value as an OCI8::NCLOB. fetch
	    BINARY_DOUBLE and BINARY_FLOAT column as a Float.
	* lib/oci8/metadata.rb: OCI8::Metadata::Column#data_type can return
	    :nclob, :bfloat and :bdouble now.
	* ext/oci8/extconf.rb: check whether OCILobCreateTemporary exists.
	* ext/oci8/lob.c: add OCI8::NCLOB.
	* ext/oci8/oci8.h: add oci8_make_nclob().
	* ext/oci8/tdo.c: use oci8_make_nclob().

2007-04-26  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8/oci8.rb: fetch BFILE as OCI8::BFILE.
	* ext/oci8/lob.c: add OCI8::BFILE.
	* ext/oci8/oci8.h: add oci8_make_bfile().
	* ext/oci8/tdo.c: use oci8_make_bfile().
	* ext/oci8/stmt.c: use oci8_get_error_code().

2007-04-21  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/error.c: change a way to set the error line number to the
	    OCIException's backtrace.

2007-02-15  KUBO Takehiro  <kubo@jiubao.org>
	no new features. fix to suppress warnings and to compile with ruby 1.9.
	* ext/oci8/attr.c, ext/oci8/lob.c, ext/oci8/metadata.c, ext/oci8/oci8.c,
	  ext/oci8/oci8.h, ext/oci8/oci8lib.c, ext/oci8/rowid.c, ext/oci8/stmt.c,
	  ext/oci8/tdo.c: use union to suppress warnings: dereferencing type-punned
	    pointer will break strict-aliasing rules.
	* ext/oci8/bind.c: change a format string tu suppress a warning.
	* ext/oci8/error.c: use rb_errinfo() instead of ruby_errinfo to compile with ruby 1.9.
	* ext/oci8/oci8.h: define rb_errinfo() as ruby_errinfo when compling with ruby 1.8.
	* ext/oci8/oci8lib.c: delete unused macros OCI_DEFAULT and OCI_COMMIT_ON_SUCCESS.
	* ext/oci8/ocidatetime.c, ext/oci8/ocinumber.c: fix bugs.
	* ext/oci8/oraconf.rb: use File.exist? instead of File.exists?. The latter become obsolete on ruby 1.9.
	* lib/oci8/compat.rb: fix for ruby 1.9. Class.constants returns an array of Symbols in 1.9.

2007-02-14  Oracle Corporation (modified for 2.0 by KUBO Takehiro <kubo@jiubao.org>)